--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -312,7 +312,7 @@
 *** xref:advtable.adoc[Enhanced Tables]
 *** Export to PDF
 **** xref:exportpdf.adoc[Export to PDF]
-**** xref:export-to-pdf-standalone-service.adoc[Export to PDF standalone service]
+**** xref:html-to-pdf-converter-api.adoc[HTML to PDF Converter API]
 *** Export to Word
 **** xref:exportword.adoc[Export to Word]
 **** xref:export-to-word-standalone-service.adoc[Export to Word standalone service]
