DOC-2446: Add TINY-10374 release note entry (#3327)
* DOC-2446: Add TINY-10374 release note entry

* Update modules/ROOT/pages/7.2-release-notes.adoc

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

---------

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

--- a/modules/ROOT/pages/7.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.2-release-notes.adoc
@@ -120,12 +120,12 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 [[improvements]]
 == Improvements
 
-{productname} {release-version} also includes the following improvement<s>:
+{productname} {release-version} also includes the following improvements:
 
-=== <TINY-vwxyz 1 changelog entry>
-// #TINY-vwxyz1
+=== Added `referrerpolicy` as a valid attribute for an iframe element.
+// #TINY-10374
 
-// CCFR here.
+Previously in {productname}, the `referrerpolicy` attribute was not considered as valid for iframe elements. In {productname} {release-version}, this attribute has been added to the schema, allowing users to include the `referrerpolicy` attribute in iframes.
 
 
 [[additions]]
