--- a/modules/ROOT/pages/powerpaste-options.adoc
+++ b/modules/ROOT/pages/powerpaste-options.adoc
@@ -19,6 +19,8 @@ include::partial$configuration/powerpaste_googledocs_import.adoc[leveloffset=+1]
 
 include::partial$configuration/powerpaste_html_import.adoc[leveloffset=+1]
 
+include::partial$configuration/powerpaste_autolink_urls.adoc[leveloffset=+1]
+
 include::partial$configuration/powerpaste_allow_local_images.adoc[leveloffset=+1]
 
 include::partial$configuration/paste_block_drop.adoc[leveloffset=+1]
