--- a/modules/ROOT/partials/configuration/smart_paste.adoc
+++ b/modules/ROOT/partials/configuration/smart_paste.adoc
@@ -14,6 +14,8 @@ To disable the `+smart_paste+` functionality, set `+smart_paste+` to `+false+`. 
 
 *Possible values:* `+true+`, `+false+`
 
+NOTE: Setting the xref:powerpaste_autolink_urls[`+powerpaste_autolink_urls+`] option to `+false+` overrides the auto-linking feature of the `+smart_paste+` option.
+
 === Example: using `+smart_paste+`
 
 ifdef::plugincode[]
