DOC-2446: Bump spelling.war version to 2.119.6 for release 7.2.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -407,6 +407,7 @@
 ** xref:release-notes.adoc[Release notes for {productname} {productmajorversion}]
 *** {productname} 7.2
 **** xref:7.2-release-notes.adoc#overview[Overview]
+**** xref:7.2-release-notes.adoc#accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
 **** xref:7.2-release-notes.adoc#new-premium-plugin<s>[New Premium plugin<s>]
 **** xref:7.2-release-notes.adoc#new-open-source-plugin<s>[New Open Source plugin<s>]
 **** xref:7.2-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
