DOC-2446: update introduction-to-tiny-spellchecker/supported-languages.adoc.

--- a/modules/ROOT/partials/misc/spellchecker-languages.adoc
+++ b/modules/ROOT/partials/misc/spellchecker-languages.adoc
@@ -11,22 +11,22 @@ The following languages are supported for the Spell Checker plugin. All of the l
 |English (Canada) |en_CA |{cross} |{tick}
 |English (United Kingdom) |en_GB, en_UK, en_BR |{tick} |{tick}
 |English (United States) |en, en_US |{tick} |{tick}
-|Medical English (US) |en_US-medical |{tick} |{tick}
+|Medical English (US) |en-medical, en_US-medical |{tick} |{tick}
 |Medical English (UK) |en_GB-medical |{tick} |{cross}
 |Danish |da |{tick} |{tick}
-|Dutch |nl |{tick} |{tick}
+|Dutch |nl, nl_NL |{tick} |{tick}
 |Finnish |fi |{tick} |{cross}
 |French |fr |{tick} |{tick}
-|German |de |{tick} |{tick}
+|German |de, de_DE |{tick} |{tick}
 |Hungarian |hu |{cross} |{tick}
-|Italian |it |{tick} |{tick}
+|Italian |it, it_IT |{tick} |{tick}
 |Maori (New Zealand) |mi_NZ |{cross} |{tick}
-|Norwegian Bokmål |nb |{tick} |{tick}
+|Norwegian Bokmål |nb, nb_NO |{tick} |{tick}
 |Norwegian Nynorsk |nn |{cross} |{tick}
 |Polish |pl |{cross} |{tick}
-|Portuguese (Brazil) |pt |{tick} |{tick}
+|Portuguese (Brazil) |pt, pt_BR |{tick} |{tick}
 |Portuguese (Portugal) |pt_PT |{tick} |{tick}
 |Spanish |es |{tick} |{tick}
-|Swedish |sv |{tick} |{tick}
+|Swedish |sv, sv_SE |{tick} |{tick}
 |Swedish (Finland) |sv_FI |{cross} |{tick}
 |===
