--- a/modules/ROOT/pages/7.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.2-release-notes.adoc
@@ -127,7 +127,7 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 
 Previously in {productname}, the `referrerpolicy` attribute was not considered as valid for iframe elements. In {productname} {release-version}, this attribute has been added to the schema, allowing users to include the `referrerpolicy` attribute in iframes.
 
-=== Improved Find & Replace dialog accessibility by changing placeholders to labels.
+=== Improved Search & Replace dialog accessibility by changing placeholders to labels.
 // #TINY-10871
 
 In previous versions of {productname}, the Find & Replace dialog inputs were initially implemented with placeholders.
